Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27523

Clang build of Qt incorrectly detected as GCC when importing build

XMLWordPrintable

    • d0a9b873cb (qt-creator/qt-creator/7.0) d0a9b873cb (qt-creator/qt-creator/master) d0a9b873cb (qt-creator/tqtc-qt-creator/7.0)

      I configured Qt with these arguments:

      -DCMAKE_BUILD_TYPE=Debug -DFEATURE_framework=OFF -DFEATURE_developer_build=ON -DQT_BUILD_TESTS=ON -DQT_BUILD_TESTS_BY_DEFAULT=OFF -DQT_BUILD_EXAMPLES=ON -DQT_BUILD_EXAMPLES_BY_DEFAULT=OFF -DFEATURE_sanitize_address=ON
      

      It resulted in this output:

      configure-output.txt

      There's no mention of GCC there; only Clang.

      When importing the build, it creates a temporary kit instead of using the one I added manually:

      This is the kit that I added:

      This is the temporary kit:

      The differences between the two (besides the CMake being messed up - QTCREATORBUG-26999) are the compilers. For some reason, Creator insists that it was built with GCC.

      Qt 6.2.3 (arm64-little_endian-lp64 shared (dynamic) release build; by Clang 13.0.0 (clang-1300.0.29.3) (Apple)) on "cocoa" 
      OS: macOS 12.2 [darwin version 21.3.0]
      
      Architecture: arm64; features: Neon
      
      Environment:
      
      Features: QT_NO_EXCEPTIONS QT_NO_OPENSSL
      
      Library info:
        PrefixPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents
        DocumentationPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents/doc
        HeadersPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents/include
        LibrariesPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents/lib
        LibraryExecutablesPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents/libexec
        BinariesPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents/MacOS
        PluginsPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents/PlugIns
        QmlImportsPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents/Imports/qtquick2
        ArchDataPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents
        DataPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents
        TranslationsPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents/translations
        ExamplesPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents/examples
        TestsPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents/tests
        SettingsPath: /Users/mitch/dev/Qt/Qt Creator.app/Contents
      
      Standard paths [*...* denote writable entry]:
        DesktopLocation: "Desktop" */Users/mitch/Desktop*
        DocumentsLocation: "Documents" */Users/mitch/Documents*
        FontsLocation: "Fonts" */Users/mitch/Library/Fonts* /Library/Fonts /System/Library/Fonts
        ApplicationsLocation: "Applications" */Users/mitch/Applications* /Applications
        MusicLocation: "Music" */Users/mitch/Music*
        MoviesLocation: "Movies" */Users/mitch/Movies*
        PicturesLocation: "Pictures" */Users/mitch/Pictures*
        TempLocation: "Temporary Items" */private/var/folders/gt/d6wqzmhj7yg3tsxjy7x94wkh0000gn/T*
        HomeLocation: "Home" */Users/mitch*
        AppLocalDataLocation: "Application Support" */Users/mitch/Library/Application Support/QtProject/qtdiag* /Library/Application Support/QtProject/qtdiag /Users/mitch/dev/Qt/Qt Creator.app/Contents/Resources
        CacheLocation: "Caches" */Users/mitch/Library/Caches/QtProject/qtdiag* /Library/Caches/QtProject/qtdiag
        GenericDataLocation: "Application Support" */Users/mitch/Library/Application Support* /Library/Application Support
        RuntimeLocation: "Application Support" */Users/mitch/Library/Application Support*
        ConfigLocation: "Preferences" */Users/mitch/Library/Preferences*
        DownloadLocation: "Downloads" */Users/mitch/Downloads*
        GenericCacheLocation: "Caches" */Users/mitch/Library/Caches* /Library/Caches /System/Library/Caches
        GenericConfigLocation: "Preferences" */Users/mitch/Library/Preferences*
        AppDataLocation: "Application Support" */Users/mitch/Library/Application Support/QtProject/qtdiag* /Library/Application Support/QtProject/qtdiag /Users/mitch/dev/Qt/Qt Creator.app/Contents/Resources
        AppConfigLocation: "Preferences" */Users/mitch/Library/Preferences/QtProject/qtdiag*
      
      File selectors (increasing order of precedence):
        en_AU unix darwin macos
      
      Network:
        Using "Secure Transport, macOS 12.2", version: 0x0
      
      Platform capabilities: ThreadedPixmaps OpenGL BufferQueueingOpenGL WindowMasks MultipleWindows ApplicationState ForeignWindows NonFullScreenWindows NativeWidgets WindowManagement RasterGLSurface ApplicationIcon
      
      Style hints:
        mouseDoubleClickInterval: 400
        mousePressAndHoldInterval: 800
        startDragDistance: 10
        startDragTime: 500
        startDragVelocity: 0
        keyboardInputInterval: 400
        keyboardAutoRepeatRate: 30
        cursorFlashTime: 1000
        showIsFullScreen: 0
        showIsMaximized: 0
        passwordMaskDelay: 0
        passwordMaskCharacter: U+2022
        fontSmoothingGamma: 2
        useRtlExtensions: 0
        setFocusOnTouchRelease: 0
        tabFocusBehavior: Qt::TabFocusBehavior(3) 
        singleClickActivation: 0
      
      Additional style hints (QPlatformIntegration):
        ReplayMousePressOutsidePopup: 1
      
      Theme:
        Platforms requested : cocoa
                  available : 
        Styles requested    : macOS
               available    : macOS,Windows,Fusion
        System font         : ".AppleSystemUIFont" 13
        Native file dialog
        Native color dialog
        Native font dialog
      
      Fonts:
        General font : ".AppleSystemUIFont" 13
        Fixed font   : "Menlo" 10
        Title font   : ".AppleSystemUIFont" 13
        Smallest font: ".AppleSystemUIFont" 9
      
      Palette:
        QPalette::WindowText: #d8000000
        QPalette::Button: #ffececec
        QPalette::Light: #ffffffff
        QPalette::Midlight: #fff5f5f5
        QPalette::Dark: #ffbfbfbf
        QPalette::Mid: #ffa9a9a9
        QPalette::Text: #d8000000
        QPalette::BrightText: #ffffffff
        QPalette::ButtonText: #d8000000
        QPalette::Base: #ffffffff
        QPalette::Window: #ffececec
        QPalette::Shadow: #ff000000
        QPalette::Highlight: #ffa5cdff
        QPalette::HighlightedText: #d8000000
        QPalette::Link: #ff094fd1
        QPalette::LinkVisited: #ffff00ff
        QPalette::AlternateBase: #fff5f5f5
        QPalette::NoRole: #ff000000
        QPalette::ToolTipBase: #ffffffff
        QPalette::ToolTipText: #ff000000
        QPalette::PlaceholderText: #3f000000
      
      Screens: 1, High DPI scaling: inactive
      # 0 "" Depth: 24 Primary: yes
        Manufacturer: 
        Model: 
        Serial number: 
        Geometry: 1512x982+0+0 Available: 1512x944+0+38
        Physical size: 301.214x195.63 mm  Refresh: 120 Hz Power state: 0
        Physical DPI: 127.5,127.5 Logical DPI: 72,72 Subpixel_RGB
        DevicePixelRatio: 2
        Primary orientation: 2 Orientation: 0 Native orientation: 0
      
      Input devices: 1
        QInputDevice::DeviceType::Keyboard "keyboard", capabilities:
      
      
      LibGL Vendor: Apple
      Renderer: Apple M1 Pro
      Version: 2.1 Metal - 76.3
      Shading language: 1.20
      Format: Version: 2.1 Profile: 0 Swap behavior: 2 Buffer size (RGB): 8,8,8
      Profile: None (QOpenGLFunctions_1_1122014656)
      
      Qt Rendering Hardware Interface supported backends:
      OpenGL (with default QSurfaceFormat):
        Driver Info: Device: Apple Apple M1 Pro 2.1 Metal - 76.3 Device ID: 0x0 Vendor ID: 0x0 Device type: Unknown
        Min Texture Size: 1
        Max Texture Size: 16384
        Max Color Attachments: 8
        Frames in Flight: 1
        Async Readback Limit: 1
        MaxThreadGroupsPerDimension: 0
        MaxThreadsPerThreadGroup: 0
        MaxThreadGroupX: 0
        MaxThreadGroupY: 0
        MaxThreadGroupZ: 0
        Uniform Buffer Alignment: 1
        Supported MSAA sample counts: 1,2,4
        Features:
          - MultisampleTexture
          v MultisampleRenderBuffer
          - DebugMarkers
          - Timestamps
          - Instancing
          - CustomInstanceStepRate
          - PrimitiveRestart
          v NonDynamicUniformBuffers
          v NonFourAlignedEffectiveIndexBufferOffset
          v NPOTTextureRepeat
          - RedOrAlpha8IsRed
          v ElementIndexUint
          - Compute
          v WideLines
          v VertexShaderPointSize
          - BaseVertex
          - BaseInstance
          v TriangleFanTopology
          v ReadBackNonUniformBuffer
          v ReadBackNonBaseMipLevel
          - TexelFetch
          v RenderToNonBaseMipLevel
          - IntAttributes
          v ScreenSpaceDerivatives
          - ReadBackAnyTextureFormat
        Texture formats: RGBA8 BGRA8 R8 R16 RG8 RED_OR_ALPHA8 BC1 BC2 BC3
      Metal:
        Driver Info: Device: Apple M1 Pro Device ID: 0x10000087E Vendor ID: 0x0 Device type: Integrated
        Min Texture Size: 1
        Max Texture Size: 16384
        Max Color Attachments: 8
        Frames in Flight: 2
        Async Readback Limit: 2
        MaxThreadGroupsPerDimension: 65535
        MaxThreadsPerThreadGroup: 1024
        MaxThreadGroupX: 1024
        MaxThreadGroupY: 1024
        MaxThreadGroupZ: 1024
        Uniform Buffer Alignment: 256
        Supported MSAA sample counts: 1,2,4
        Features:
          v MultisampleTexture
          v MultisampleRenderBuffer
          v DebugMarkers
          - Timestamps
          v Instancing
          v CustomInstanceStepRate
          v PrimitiveRestart
          v NonDynamicUniformBuffers
          - NonFourAlignedEffectiveIndexBufferOffset
          v NPOTTextureRepeat
          v RedOrAlpha8IsRed
          v ElementIndexUint
          v Compute
          - WideLines
          v VertexShaderPointSize
          v BaseVertex
          v BaseInstance
          - TriangleFanTopology
          v ReadBackNonUniformBuffer
          v ReadBackNonBaseMipLevel
          v TexelFetch
          v RenderToNonBaseMipLevel
          v IntAttributes
          v ScreenSpaceDerivatives
          v ReadBackAnyTextureFormat
        Texture formats: RGBA8 BGRA8 R8 R16 RG8 RED_OR_ALPHA8 RGBA16F RGBA32F R16F R32F D16 D32F BC1 BC2 BC3 BC4 BC5 BC6H BC7
      
      
      Plugin information:
      
      + Android                           7.0.1
      + AutoTest                          7.0.1
        AutotoolsProjectManager           7.0.1
        BareMetal                         7.0.1
        Bazaar                            7.0.1
        Beautifier                        7.0.1
      + BinEditor                         7.0.1
      + Bookmarks                         7.0.1
        Boot2Qt                           7.0.1
      + CMakeProjectManager               7.0.1
        CVS                               7.0.1
      + ClangCodeModel                    7.0.1
        ClangFormat                       7.0.1
      + ClangTools                        7.0.1
      + ClassView                         7.0.1
        ClearCase                         7.0.1
      + CodePaster                        7.0.1
        CompilationDatabaseProjectManager 7.0.1
        Conan                             7.0.1
      + Core                              7.0.1
      + CppEditor                         7.0.1
        Cppcheck                          7.0.1
      + CtfVisualizer                     7.0.1
      + Debugger                          7.0.1
      + Designer                          7.0.1
      + DiffEditor                        7.0.1
        Docker                            7.0.1
        EmacsKeys                         7.0.1
        FakeVim                           7.0.1
      + GLSLEditor                        7.0.1
      + GenericProjectManager             7.0.1
      + Git                               7.0.1
        HelloWorld                        7.0.1
      + Help                              7.0.1
      + ImageViewer                       7.0.1
        IncrediBuild                      7.0.1
      + Ios                               7.0.1
      + LanguageClient                    7.0.1
      + LicenseChecker                    7.0.1
      + Macros                            7.0.1
        Marketplace                       7.0.1
        McuSupport                        7.0.1
        Mercurial                         7.0.1
        MesonProjectManager               7.0.1
        ModelEditor                       7.0.1
        Nim                               7.0.1
      + PerfProfiler                      7.0.1
        Perforce                          7.0.1
      + ProjectExplorer                   7.0.1
      + Python                            7.0.1
      + QbsProjectManager                 7.0.1
      + QmakeProjectManager               7.0.1
        QmlDesigner                       7.0.1
      + QmlJSEditor                       7.0.1
      + QmlJSTools                        7.0.1
      + QmlPreview                        7.0.1
      + QmlProfiler                       7.0.1
      + QmlProjectManager                 7.0.1
      + Qnx                               7.0.1
      + QtSupport                         7.0.1
      + RemoteLinux                       7.0.1
      + ResourceEditor                    7.0.1
        ScxmlEditor                       7.0.1
        SerialTerminal                    7.0.1
        SilverSearcher                    7.0.1
        StudioWelcome                     7.0.1
        Subversion                        7.0.1
      + TaskList                          7.0.1
      + TextEditor                        7.0.1
        Todo                              7.0.1
      + UpdateInfo                        7.0.1
      + Valgrind                          7.0.1
      + VcsBase                           7.0.1
        Vxworks                           7.0.1
        WebAssembly                       7.0.1
        Welcome                           7.0.1
        WinRt                             7.0.1
      
      Used settingspath: ~/.config/QtProject
      
      Qt Creator 7.0.1
      Based on Qt 6.2.3 (Clang 13.0 (Apple), 64 bit)
      From revision da16d778d5
      Built on Apr 26 2022 01:24:38
      
      

        1. Screen Shot 2022-05-09 at 10.20.36.png
          375 kB
          Mitch Curtis
        2. configure-output.txt
          31 kB
          Mitch Curtis
        3. Screen Shot 2022-05-09 at 10.25.27.png
          1.38 MB
          Mitch Curtis
        4. Screen Shot 2022-05-09 at 10.26.14.png
          737 kB
          Mitch Curtis
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes