ProjectExplorer: Include symlinks for compiler import name matching

On macOS /Library/Developer/CommandLineTools/usr/bin/cc is a symlink
to /Library/Developer/CommandLineTools/usr/bin/clang, and should not
be matched as a GCC toolchain.

Fixes: QTCREATORBUG-27523
Change-Id: I8885a263b46fa8d8a8145f7c0faa31f21aae920a
Reviewed-by: Eike Ziller <eike.ziller@qt.io>